# wapiti

./: .coverage  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pylintrc  .txt  Dockerfile  Dockerfile.endpoint  Dockerfile.headless  Dockerfile.integration  Dockerfile.test  INSTALL.md  ISSUE_654_RESOLUTION_REPORT.md  LICENSE  MANIFEST.in  Makefile  PASSIVE_MODULES_IMPLEMENTATION.md  Pipfile  README.md  README.rst  VERSION  coverage.json  coverage.xml  docker-compose.yaml  make_exe.py  openssl_conf  pylint-ignore.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  streak.py  wapiti.spec
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
.svn/: wc.db
doc/: AUTHORS  ChangeLog_Wapiti  ChangeLog_lswww  FAQ.md  cookies_and_scripts_auth.md  docker-compose.dummy.yml  endpoints.md  example.txt  headless_mode.md  integration_system.md  wapiti-getcookie.1  wapiti-getcookie.1.html  wapiti-getcookie.ronn  wapiti.1  wapiti.1.html  wapiti.ronn  xxe_module.md
docs/: example.txt  index.html
endpoint/: .htaccess  e.php  exec_test.txt  functions.php  get_ssrf.php  get_xxe.php  ssrf_store.php  xxe_dtd.php  xxe_store.php
tests/: __init__.py
tests/attack/: fake_persister.py  test_active_scanner.py  test_blind_sql.py  test_mod_backup.py  test_mod_blindsql.py  test_mod_brute_login_form.py  test_mod_buster.py  test_mod_cms.py  test_mod_cookiefags.py  test_mod_cookieflags.py  test_mod_crlf.py  test_mod_csp.py  test_mod_csrf.py  test_mod_drupal_enum.py  test_mod_exec.py  test_mod_file.py  test_mod_htaccess.py  test_mod_htp.py  test_mod_http_post.py  test_mod_https_redirect.py  test_mod_joommla_enum.py  test_mod_ldap.py  test_mod_log4shell.py  test_mod_methods.py  test_mod_network_device.py  test_mod_nikto.py  test_mod_permanentxss.py  test_mod_prestasop_enum.py  test_mod_printer.py  test_mod_redirect.py  test_mod_redirect.py.bak  test_mod_shellshock.py  test_mod_spring4shell.py  test_mod_sql.py  test_mod_ssl.py  test_mod_ssrf.py  test_mod_takeover.py  test_mod_timesql.py  test_mod_upload.py  test_mod_wapp.py  (+7 more)
tests/cli/: test_attack_options.py  test_options.py  test_shutdown.py
tests/cookies/: test_conversion.py  test_getcookie.py  test_json_cookie.py
tests/cve/: test_cve.py
tests/data/: absolute_root_links.html  base_extra_links.html  base_other_links.html  base_relative_links.html  blind_sql.php  chunked_timeout.php  empty.html  extra_links.html  forms.html  httpbin.php  inclusion.php  js_links.html  lfi_with_suffix.php  logged_in.html  logged_in_failed_explicit.html  logged_in_failed_implicit.html  logged_in_with_account.html  logged_in_with_profile.html  meta.html  not_logged_in_with_form.html  open_redirect.php  open_redirect_delayed.php  open_redirect_immediate.php  open_redirect_nourl.php  open_redirect_short_delay.php  openapi3.yaml  other_links.html  relative_links.html  relative_root_links.html  swagger.json  time_sql.php  timeout.php
tests/definitions/: test_abstract_classes.py
tests/endpoint/: test_endpoint.py
tests/integration/: .env  check.sh  d1ocker-compose.wapiti.yml  docker-compose.setup.yml  docker-compose.test_wp.yml  docker-compose.wapiti.yml  init_test.sh  modules.json  regenerate_assertions.sh  run.sh  stop.sh  test.py  test.sh
tests/mutation/: test_json_mutator.py
tests/net/: test_auth.py  test_crawler.py  test_jsoncookie.py  test_page.py  test_web.py
tests/parsers/: test_html_formaction.py  test_html_forms.py  test_html_parser.py  test_http_parser.py  test_js_parser.py  test_json_parser.py  test_swagger_parser.py  test_swagger_parser_complex.py  test_swagger_parser_enctype.py  test_swf_parser.py  test_xss_utils.py  text_xss_utils.py
tests/payload/: test_payload_reader.py
tests/reports/: test_nuclei_report.py  test_reports.py  test_xml_detail_levels.py
tests/wappalyzer/: test_wappalyzer.py
tests/web/: test_crawl.py  test_explorer.py  test_intercepting_explorer.py  test_mysql_backend.py  test_network_issues.py  test_persister.py  test_postgres_backend.py  test_request.py  test_scope.py  test_sqlite_backend.py
wapiti3/: pyvenv.cfg
wapitiCore/: __init__.py  moon.py
wapitiCore/attack/: active_scanner.py  attack.py  mod_backup.py  mod_basic_auth_bf.py  mod_blindsql.py  mod_brute_login_form.py  mod_buster.py  mod_check_cookies_headers.py  mod_cms.py  mod_cookieflags.py  mod_crlf.py  mod_csp.py  mod_csrf.py  mod_delay.py  mod_drupal_enum.py  mod_exec.py  mod_file.py  mod_htaccess.py  mod_htp.py  mod_http_headers.py  mod_http_post.py  mod_https_redirect.py  mod_joomla_enum.py  mod_ldap.py  mod_log4shell.py  mod_methods.py  mod_network_device.py  mod_nikto.py  mod_permanentxss.py  mod_prestashop_enum.py  mod_printer.py  mod_redirect.py  mod_shellshock.py  mod_spring4shell.py  mod_sql.py  mod_ssl.py  mod_ssrf.py  mod_takeover.py  mod_timesql.py  mod_upload.py  (+5 more)
wapitiCore/controller/: exceptions.py  wapiti.py
wapitiCore/definitions/: __init__.py  backup.py  base.py  blindsql.py  buster.py  cleartext_password_submission.py  credentials.py  crlf.py  csp.py  csrf.py  cve_2024_55591.py  dangerous_resource.py  exec.py  file.py  fingerprint.py  fingerprint_webapp.py  fingerprint_webserver.py  htaccess.py  html_injection.py  http_headers.py  http_only.py  http_post.py  https_redirect.py  inconsistent_redirection.py  information_disclosure.py  internal_error.py  ldapi.py  log4shell.py  methods.py  ns_takeovers.py  redirect.py  reflected_xss.py  resource_consumption.py  secure_cookie.py  spring.py  spring4shell.py  sql.py  ssl.py  ssrf.py  stacktrace_disclosure.py  (+9 more)
wapitiCore/file/: additionalxmlparser.py  anomalyxmlparser.py  reportgeneratorsxmlparser.py  vulnerabilityxmlparser.py
wapitiCore/language/: language.py  logger.py  vulnerability.py
wapitiCore/language_sources/: de.po  en.po  es.po  file_list.txt  fr.po  generateSources.sh  generateTranslations.sh  ms.po  pt.po  sav_en.po  template.po  zh.po
wapitiCore/main/: banners.py  getcookie.py  headless.py  log.py  wapiti.py
wapitiCore/model/: __init__.py  vulnerability.py
wapitiCore/mutation/: json_mutator.py
wapitiCore/net/: __init__.py  auth.py  (+21 more)
(+2319 files in other folders)
